--- a/templates/alternatives.html
+++ b/templates/alternatives.html
@@ -101,7 +101,7 @@
 			<div class="col-md-12 md-margin-bottom-40">
 				<!--Inversed and Rounded Buttons-->
 				<div class="row brand-page margin-bottom-40">
-							<div class="col-sm-6 col-md-3">
+							<div class="col-sm-6 col-md-2">
 								<a href="#fishing">
 									<button class="btn btn-block btn-html5-inversed rounded" >Balıkcılık</button>
 								</a>
@@ -112,13 +112,19 @@
 								</button>
 								</a>
 							</div>
+							<div class="col-sm-6 col-md-2">
+								<a href="#aticilik">
+								<button class="btn btn-block btn-html5-inversed rounded">Atıcılık
+								</button>
+								</a>
+							</div>
 							<div class="col-sm-6 col-md-3">
 								<a href="#parachute">
 								<button class="btn btn-block btn-html5-inversed rounded">Yamaç Paraşütü
 								</button>
 								</a>
 							</div>
-							<div class="col-sm-6 col-md-3">
+							<div class="col-sm-6 col-md-2">
 								<a href="#tracking">
 								<button class="btn btn-block btn-html5-inversed rounded">Treking
 								</button>
@@ -130,19 +136,13 @@
 								</button>
 								</a>
 							</div>
-							<div class="col-sm-6 col-md-1">
+							<div class="col-sm-6 col-md-2">
 								<a href="#skiing">
 								<button class="btn btn-block btn-html5-inversed rounded">Kayak
 								</button>
 								</a>
 							</div>
 							<div class="col-sm-6 col-md-3">
-								<a href="#mountainhotel">
-								<button class="btn btn-block btn-html5-inversed rounded">Dağ Oteli
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-2">
 								<a href="#cave">
 								<button class="btn btn-block btn-html5-inversed rounded">Mağara Gezisi
 								</button>
@@ -153,9 +153,15 @@
 								<button class="btn btn-block btn-html5-inversed rounded">At Binicilik
 								</button>
 							</div>
-							<div class="col-sm-6 col-md-2">
+							<div class="col-sm-6 col-md-3">
 								<a href="#pyramit">
 								<button class="btn btn-block btn-html5-inversed rounded">Piramitler
+								</button>
+								</a>
+							</div>
+							<div class="col-sm-6 col-md-2">
+								<a href="#donkey">
+								<button class="btn btn-block btn-html5-inversed rounded">Eşek Çiftliği
 								</button>
 								</a>
 							</div>
@@ -168,12 +174,6 @@
 							<div class="col-sm-6 col-md-3">
 								<a href="#titosbanker">
 								<button class="btn btn-block btn-html5-inversed rounded">Tito'nun Sığınağı
-								</button>
-								</a>
-							</div>
-							<div class="col-sm-6 col-md-2">
-								<a href="#donkey">
-								<button class="btn btn-block btn-html5-inversed rounded">Eşek Çiftliği
 								</button>
 								</a>
 							</div>
@@ -248,8 +248,8 @@
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge" id="mountainhotel">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/aticilik.jpg"%}" alt="">
+								<div class="news-v2-badge" id="aticilik">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/aticilik.jpg"%}" alt="">
 									<p>
 										<span>€ 30</span>
 
@@ -370,7 +370,7 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">Eşek Çiftiği</a></h3>
-									<p>Eşek Çiftiği Oldukça değerli eşek peynirinin üretimi ve çiftliğin gezilmesi.</p>
+									<p>Oldukça değerli eşek peynirinin üretimi ve çiftliğin gezilmesi.</p>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
