--- a/templates/bk-tour.html
+++ b/templates/bk-tour.html
@@ -818,21 +818,9 @@
 										<div class="carousel slide carousel-v1" id="list4">
 											<div class="carousel-inner">
 												<div class="item active">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/ostrogkilisemisafirhanesi.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Ostrog Kilise Misafirhanesi</p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/ostrogmanastiri.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Ostrog Manastırı</p>
-													</div>
-												</div>
-												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgorica-hercegovackacaddesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Hersekovaçka Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -908,51 +896,29 @@
 						<li class="equal-height-columns">
 							<div class="cbp_tmtime equal-height-column">
 								<span>5. GÜN</span>
-								<span>Ustabolino Camii</span>
-								<span>Rorovi parkı</span>
-								<span>Bijela voda </span>
-								<span>Kayseri Camii</span>
-								<span>Köprü altında köprü</span>
-								<span>Anne çocuk anıtı</span>
-								<span>Drina köprüsü </span>
-								<span>Drina’da tekne Gezintisi</span>
-								<span>Andriçgrad gezintisi</span>
+								<span>Ostrog</span>
+								<span>Ostrog Manastırı</span>
+								<span>Üzüm Bağları </span>
+								<span>Potgoritsa Bağları</span>
+								<span>Potgoritsaya Geçiş</span>
 								<span></span>
 							</div>
 							<i class="cbp_tmicon rounded-x hidden-xs"></i>
 							<div class="cbp_tmlabel equal-height-column">
-								<h2>Vişegrad</h2>
+								<h2>Ostrog</h2>
 								<div class="timeline-heading">
 										<div class="carousel slide carousel-v1" id="list5">
 											<div class="carousel-inner">
 												<div class="item active">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/visegrad-gorajde/slider900x600/Drinakoprusu.jpg"%}" alt=""/>
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/ostrogkilisemisafirhanesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Drina Köprüsü</p>
+														<p>Ostrog Kilise Misafirhanesi</p>
 													</div>
 												</div>
 												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/visegrad-gorajde/slider900x600/drinateknegezintisi.JPG"%}" alt=""/>
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/ostrogmanastiri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Drina Tekne Gezisi</p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/visegrad-gorajde/slider900x600/Kaysericamii.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Kayseri Camii</p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/visegrad-gorajde/slider900x600/Roroviparki.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Rarovi Parkı</p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/visegrad-gorajde/slider900x600/Turhanbegcamii.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Turhan Bey Camii</p>
+														<p>Ostrog Manastırı</p>
 													</div>
 												</div>
 											</div>
