--- a/templates/cities.html
+++ b/templates/cities.html
@@ -105,7 +105,7 @@
 							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/cities/tinytabs/mostar.jpg"%}" alt="ALT" class="img-responsive"></div>
 							<div class="popular-tours-item-info">
 								<div class="popular-tours-item-info-inner">
-									<h3>BOSNA HERSEK ŞEHİRLERİ</h3>
+									<h3>BOSNA HERSEK</h3>
 								</div>
 							</div>
 							<a href="/cities" class="popular-tours-item__more"></a>
@@ -118,7 +118,7 @@
 							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/cities/tinytabs/dubrovnik.jpg"%}" height="100px" alt="ALT" class="img-responsive"></div>
 							<div class="popular-tours-item-info">
 								<div class="popular-tours-item-info-inner">
-									<h3>BALKAN ŞEHİRLERİ</h3>
+									<h3>BALKANLAR</h3>
 								</div>
 							</div>
 							<a href="/cities/cities2" class="popular-tours-item__more"></a>
@@ -259,8 +259,9 @@ Foynitsa, bu tarihinin yanında günümüzde Fransisken kilisesi, kaplıcaları 
 						</div>
 						<div>
 							<h3></h3>
-							<p>Bölge, en azından İliryalı ve Romalılar zamanından itibaren bir yerleşim yeridir, ancak kentle ilgili ilk bilgi 1260 yılında Kral Bela IV'e ait bir belgede geçmektedir.<br><br>
-Osmanlılar ile Avusturya-Macaristan arasındaki sınırı tayin eden kuzeybatı uç sınırı olan bu topraklardı. Bihaç, Una Nehri kıyısında büyüleyici küçük bir kasabadır. Kasaba, kaçınılmaz olarak güzel Una'nın etrafında yerleşen kafelerle doludur. Bu, Una’nın zümrüt sularının kıyılarına yerleşen kasabalardan herhangi biri olan Bihaç'a paha biçilmez bir değer katmaktadır.</p>
+							<p>Bölge en azından İliryalı ve Roma zamanlarından itibaren bir yerleşim yeridir, ancak kentle ilgili ilk bilgi 1260 yılında Kral Bela IV'e ait bir belgede geçmektedir.
+Osmanlılar ile Avusturya-Macaristan arasındaki sınırı çizen, kuzeybatı uç sınırı olan bu topraklardı. Bihaç, Una Nehri kıyısıında büyüleyici küçük bir kasabadır. Kasaba, kaçınılmaz olarak güzel Una'nın etrafında yerleşen kafelerle dolu. Bu, Bihaç'a Una’nın zümrüt sularında yerleşen kasabalardan herhangi birine paha biçilmez bir değer katmaktadır.
+Adriyatik sahiline giderken veya sınırın ötesinde Plitvice Milli Parkı'nı ziyarete gidiyorsanız, Bihaç durmak için harika bir yerdir. Ya da daha iyisi, bu su kütlesinin büyüsünü gerçekten yaşamak için - birkaç günlüğüne kalın, kıyıları boyunca yürüyün, harika şelalelerinden aşağı atlayın ya da suyun her zaman söylediği hikmetleri dinleyin.</p>
 						</div>
 					</div>
 					<!--End Blog Post-->
@@ -318,55 +319,55 @@ Srebrenitsa'ya gelin. Srebrenitsa içinde ve çevresinde gezip görmek için gay
 						<dl class="dl-horizontal">
 							<dt><a href="#sarajevo"><img src="{% static "img-temp/cities/tabs/sarajevo.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#sarajevo"><b>Saraybosna</b></a></p>
+								<p><a href="#sarajevo"><b>SARAYBOSNA</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#mostar"><img src="{% static "img-temp/cities/tabs/mostar.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#mostar"><b>Mostar</b></a></p>
+								<p><a href="#mostar"><b>MOSTAR</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#travnik"><img src="{% static "img-temp/cities/tabs/travnik.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#travnik"><b>Travnik</b></a></p>
+								<p><a href="#travnik"><b>TRAVNİK</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#visegrad"><img src="{% static "img-temp/cities/tabs/visegrad.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#visegrad"><b>Vişegrad</b></a></p>
+								<p><a href="#visegrad"><b>VİŞEGRAD</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#jajce"><img src="{% static "img-temp/cities/tabs/jajce.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#jajce"><b>Jajce(Yaitse)</b></a></p>
+								<p><a href="#jajce"><b>JAJCE (YAİTSE)</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#fojnica"><img src="{% static "img-temp/cities/tabs/fojnica.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#fojnica"><b>Fojnitsa</b></a></p>
+								<p><a href="#fojnica"><b>FOJNİTSA</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#bihac"><img src="{% static "img-temp/cities/tabs/bihac.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#bihac"><b>Bihaç</b></a></p>
+								<p><a href="#bihac"><b>BİHAÇ</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#tuzla"><img src="{% static "img-temp/cities/tabs/tuzla.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#tuzla"><b>Tuzla</b></a></p>
+								<p><a href="#tuzla"><b>TUZLA</b></a></p>
 							</dd>
 						</dl>
 						<dl class="dl-horizontal">
 							<dt><a href="#srebrenica"><img src="{% static "img-temp/cities/tabs/srebrenica.jpg"%}" alt="" /></a></dt>
 							<dd>
-								<p><a href="#srebrenica"><b>Srebrenitsa</b></a></p>
+								<p><a href="#srebrenica"><b>SREBRENİTSA</b></a></p>
 							</dd>
 						</dl>
 					</div>
