--- a/templates/contact.html
+++ b/templates/contact.html
@@ -124,8 +124,8 @@
 					<!-- Business Hours -->
 					<div class="headline"><h2>Çalışma Saatleri</h2></div>
 					<ul class="list-unstyled margin-bottom-30">
-						<li><strong>Pazartesi-Cuma:</strong> 9am to 6pm</li>
-						<li><strong>Cumartesi:</strong> 9am to 3pm</li>
+						<li><strong>Pazartesi-Cuma:</strong> 9:00 to 18:00</li>
+						<li><strong>Cumartesi:</strong> 9:00 to 15:00</li>
 						<li><strong>Pazar:</strong> Kapalı</li>
 					</ul>
 
