--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
 					<div class="row">
 						<!-- About -->
 						<div class="col-md-3">
-							<div class="headline"><h2>BRIGHT TOURS</h2></div>
+							<div class="headline"><h2>BRIGHT TRAVEL</h2></div>
 							<ul class="list-unstyled who margin-bottom-10">
 								<li><a href="https://www.facebook.com/Bright-Travel-1629987677029220/" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook">
 												<i class="fa fa-facebook"></i></a>
@@ -39,6 +39,11 @@
 								<li><a href="/alternatives">Kayak</a><i class="fa fa-angle-right"></i></li>
 								<li><a href="/alternatives">At Binicilik</a><i class="fa fa-angle-right"></i></li>
 								<li><a href="/alternatives">Buz Pateni</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Atıcılık</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Balıkçılık</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Eşek Çiftliği</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Dağ Kampı</a><i class="fa fa-angle-right"></i></li>
+								<li><a href="/alternatives">Yamaç Paraşutu</a><i class="fa fa-angle-right"></i></li>
 								<li><a href="/alternatives">Daha Fazlası ...</a><i class="fa fa-angle-right"></i></li>
 							</ul>
 						</div><!--/col-md-3-->
