--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -22,7 +22,7 @@
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<div class="menu-container">
 					<a href="#body">
-						<img src="{% static "img/logo_turkuaz.png"%}" height="100" width="200" alt="BRIGHT TOURS">
+						<img src="{% static "img/logo_turkuaz.png"%}" height="100" width="200" alt="BRIGHT TRAVEL">
 					</a>
 					<ul class="nav navbar-nav">
 						<li class="page-scroll">
@@ -59,7 +59,7 @@
 		<div class="ms-slide">
 			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/sarajevosebil3.jpg"%}" alt="ALT">
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				<strong>120.00€</strong>'den başlayan fiyatlar
+				<strong>120€</strong>'den başlayan fiyatlar
 			</div>
 			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
 				BOSNA HERSEK TURLARI
@@ -76,14 +76,14 @@
 		<div class="ms-slide">
 			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/kotor.jpg"%}" alt="ALT"/>
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				<strong>350€</strong>'den başlayan fiyatlar
+				<strong>195€</strong>'den başlayan fiyatlar
 			</div>
 			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				BOSNA HERSEK - KARADAĞ
+				BALKAN TURLARI
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BOSNA HERSEK - KARADAĞ - </span>Ayrıntılar</a></p>
+				<p><a href="/balkan-tours/bk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BALKAN TURLARI - </span>Ayrıntılar</a></p>
 			</div>
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/kotor.jpg"%}" alt="thumb">
 		</div>
@@ -91,52 +91,52 @@
 
 		<!-- Slide 3 -->
 		<div class="ms-slide">
-			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/serbia.jpg"%}" alt="ALT">
+			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/travnik.jpg"%}" alt="ALT">
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				<strong>350€</strong>'den başlayan fiyatlar
+				<strong>45€</strong>'den başlayan fiyatlar
 			</div>
 			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				BOSNA HERSEK - SIRBİSTAN
+				GÜNÜ BİRLİK TURLAR
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="10" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bs-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">BOSNA HERSEK - SIRBİSTAN - </span>Ayrıntılar</a></p>
+				<p><a href="/balkan-tours/bs-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">GÜNÜ BİRLİK TURLAR - </span>Ayrıntılar</a></p>
 			</div>
-			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/serbia.jpg"%}" alt="thumb">
+			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/travnik.jpg"%}" alt="thumb">
 		</div>
 		<!-- End Slide 3 -->
 
 		<!-- Slide 4 -->
 		<div class="ms-slide">
-			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/kosova.jpg"%}" alt="ALT">
+			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/rafting2.jpg"%}" alt="ALT">
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				<strong>250€</strong>'den başlayan fiyatlar
+				<strong>30€</strong>'den başlayan fiyatlar
 			</div>
 			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" line-height="50px" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				KOSOVA - MAKEDONYA
+				ALTERNATİF TURLAR
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/km-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">KOSOVA - MAKEDONYA - </span>Ayrıntılar</a></p>
+				<p><a href="/balkan-tours/km-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ALTERNATİF TURLAR - </span>Ayrıntılar</a></p>
 			</div>
-			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/kosova.jpg"%}" alt="thumb">
+			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/rafting2.jpg"%}" alt="thumb">
 		</div>
 		<!-- End Slide 4 -->
 
 		<!-- Slide 5 -->
 		<div class="ms-slide">
-			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/kotor.jpg"%}" alt="ALT">
+			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/rentacar.jpg"%}" alt="ALT">
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
 				<strong>50€</strong>'den başlayan fiyatlar
 			</div>
 			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				GÜNÜ BİRLİK TURLAR
+				ARAÇ KİRALAMA
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/bkkm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">GÜNÜ BİRLİK TURLAR - </span>Ayrıntılar</a></p>
+				<p><a href="/balkan-tours/bkkm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ARAÇ KİRALAMA - </span>Ayrıntılar</a></p>
 			</div>
-			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/kotor.jpg"%}" alt="thumb">
+			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/rentacar.jpg"%}" alt="thumb">
 		</div>
 		<!-- End Slide 5 -->
 
@@ -156,23 +156,6 @@
 			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/croatia.jpg"%}" alt="thumb">
 		</div>
 		<!-- End Slide 6 -->
-
-		<!-- Slide 7 -->
-		<div class="ms-slide">
-			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/mostar.jpg"%}" alt="ALT">
-			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				<strong>195€</strong>'den başlayan fiyatlar
-			</div>
-			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				SARAYBOSNA - MOSTAR
-			</h3>
-			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
-				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/bosnia-tours/sm-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">SARAYBOSNA - MOSTAR </span>Ayrıntılar</a></p>
-			</div>
-			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/mostar.jpg"%}" alt="thumb">
-		</div>
-		<!-- End Slide 7 -->
 	</div>
 	<!-- End Promo Section -->
 
@@ -207,7 +190,7 @@
 				<!-- Item 3 -->
 				<div class="col-md-4 col-xs-6 col-2xs-12 g-mb-30">
 					<div class="popular-tours-item">
-						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosnia-tours/middlesize/travnik.jpg"%}" alt="ALT" class="img-responsive"></div>
+						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosnia-tours/middlesize/mostar.jpg"%}" alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
 							<div class="popular-tours-item-info-price"><strong>195€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
@@ -239,7 +222,7 @@
 				<!-- Item 3 -->
 				<div class="col-md-4 col-xs-6 col-2xs-12 g-mb-30">
 					<div class="popular-tours-item">
-						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosnia-tours/middlesize/travnik.jpg"%}" alt="ALT" class="img-responsive"></div>
+						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosnia-tours/middlesize/miljackanehri.jpg"%}" alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
 							<div class="popular-tours-item-info-price"><strong>244€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
@@ -271,7 +254,7 @@
 				<!-- Item 4 -->
 				<div class="col-md-4 col-xs-6 col-2xs-12 g-mb-30">
 					<div class="popular-tours-item">
-						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosnia-tours/middlesize/jajce.jpg"%}" alt="ALT" class="img-responsive"></div>
+						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/bosnia-tours/middlesize/visegrad.jpg"%}" alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
 							<div class="popular-tours-item-info-price"><strong>275€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
@@ -306,7 +289,7 @@
 				<!-- Item 3 -->
 				<div class="col-md-4 col-xs-6 col-2xs-12 g-mb-30">
 					<div class="popular-tours-item">
-						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/albania.jpg"%}" alt="ALT" class="img-responsive"></div>
+						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/beratsehir.jpg"%}" alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
 							<div class="popular-tours-item-info-price"><strong>195€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
@@ -322,7 +305,7 @@
 				<!-- Item 3 -->
 				<div class="col-md-4 col-xs-6 col-2xs-12 g-mb-30">
 					<div class="popular-tours-item">
-						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/albania.jpg"%}" alt="ALT" class="img-responsive"></div>
+						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/iskodra-kursunlucamii2.jpg"%}" alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
 							<div class="popular-tours-item-info-price"><strong>245€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
@@ -402,7 +385,7 @@
 				<!-- Item 4 -->
 				<div class="col-md-4 col-xs-6 col-2xs-12 g-mb-30">
 					<div class="popular-tours-item">
-						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/kosova2.jpg"%}" alt="ALT" class="img-responsive"></div>
+						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/pristina-iskenderbeymeydani.jpg"%}" alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
 							<div class="popular-tours-item-info-price"><strong>250€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
@@ -418,15 +401,15 @@
 				<!-- Item 4 -->
 				<div class="col-md-4 col-xs-6 col-2xs-12 g-mb-30">
 					<div class="popular-tours-item">
-						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/kotor.jpg"%}" alt="ALT" class="img-responsive"></div>
+						<div class="img-wrapper img-wrapper--shadow"><img  src="{% static "img-temp/balkan-tours/thumbs/karadag.jpg"%}"alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
-							<div class="popular-tours-item-info-price"><strong>390€</strong>'den başlayan fiyatlar</div>
+							<div class="popular-tours-item-info-price"><strong>250€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
 								<h3>Büyük Balkanlar</h3>
 								<p>7 gece 8 gün</p>
 							</div>
 						</div>
-						<a href="/balkan-tours/bb-tour" class="popular-tours-item__more">Ayrıntılar</a>
+						<a href="/balkan-tours/km-tour" class="popular-tours-item__more">Ayrıntılar</a>
 					</div>
 				</div>
 				<!-- End Item 4 -->
@@ -486,7 +469,7 @@
 						<!-- Item 6 -->
 						<div class="our-services-list-item equal-height-column">
 							<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/alternatives/thumbs/yamacparasutu.jpg"%}" alt="ALT" class="img-reposnsive"></div>
-							<h3>Dil Kursları</h3>
+							<h3>Yamaç Paraşutu</h3>
 							<a href="/alternatives" class="btn-u btn-u-lg btn-u-red btn-u-upper">Ayrıntılar</a>
 						</div>
 						<!-- End Item 6 -->
