--- a/templates/km-tour.html
+++ b/templates/km-tour.html
@@ -154,7 +154,7 @@
 							</div>
 							<i class="cbp_tmicon rounded-x hidden-xs"></i>
 							<div class="cbp_tmlabel equal-height-column">
-								<h2>Priştine</h2>
+								<h2>Priştine- Prizren</h2>
 								<div class="timeline-heading">
 										<div class="carousel slide carousel-v1" id="list1">
 											<div class="carousel-inner">
@@ -221,13 +221,104 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-turkpazari.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Türk Pazarı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-yasarpasa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Yaşar Paşa</p>
+													</div>
+												</div>
+
+												<div class="item ">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-eminpasacamii.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Prizren Emin Paşa Camii</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-halvetitekkesi.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Halveti Tekkesi</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-halvetitekkesii.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Halveti Tekkesi</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-kalesi.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Prizren Kalesi</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-kalesi2.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Prizren Kalesi</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-kalesii.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Prizren Kalesi</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-marasmahallesi.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Maraş Mahallesi</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-meydan.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Prizren Meydanı</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-meydan.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Prizren Meydanı</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-namazgah.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Prizren Namazgah</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-sadirvanmeydani.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Şadırvan Meydanı</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-sadirvanmeydani2.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Şadırvan Meydanı</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-seherzadekonagi.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Şeherzade Konağı</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-Sinan-Pasha-Mosque.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Sinan Paşa Camii</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-sinanpasacamii.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Sinan Paşa Camii</p>
 													</div>
 												</div>
 											</div>
