--- a/templates/hotels.html
+++ b/templates/hotels.html
@@ -101,30 +101,107 @@
 			<div class="row news-v2">
 				<div class="col-md-4 sm-margin-bottom-30">
 					<div class="news-v2-badge">
-						<img class="img-responsive" src="{% static "img-temp/hotels/holywood.jpg"%}" alt="">
+						<img class="img-responsive" src="{% static "img-temp/hotels/HOLLYWOOD.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
 						<h3><a href="#">Hotel Holywood</a></h3>
-						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
 				</div>
 				<div class="col-md-4 sm-margin-bottom-30">
 					<div class="news-v2-badge">
-						<img class="img-responsive" src="{% static "img-temp/hotels/europe.jpg"%}" alt="">
+						<img class="img-responsive" src="{% static "img-temp/hotels/EUROPE.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
 						<h3><a href="#">Hotel Europe</a></h3>
-						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="news-v2-badge">
-						<img class="img-responsive" src="{% static "img-temp/hotels/sarajevo.jpg"%}" alt="">
+						<img class="img-responsive" src="{% static "img-temp/hotels/SARAJEVO.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
 						<h3><a href="#">Hotel Sarajevo</a></h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End News v2 Gray -->
+
+		<!-- News v2 Light -->
+		<div class="bg-color-light">
+			<div class="container content-md">
+				<div class="row news-v2">
+					<div class="col-md-4 sm-margin-bottom-30">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/BM.jpg"%}" alt="">
+						</div>
+						<div class="news-v2-desc">
+							<h3><a href="#">Hotel BM</a></h3>
+							| Saraybosna | Bosna Hersek</small>
+						</div>
+					</div>
+					<div class="col-md-4 sm-margin-bottom-30">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/BRISTOL.jpg"%}" alt="">
+						</div>
+						<div class="news-v2-desc">
+							<h3><a href="#">Hotel Bristol</a></h3>
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/TERME.jpg"%}" alt="">
+						</div>
+						<div class="news-v2-desc">
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							<h3><a href="#">Terme Hotel</a></h3>
+
+							| Saraybosna | Bosna Hersek</small>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End News v2 Light -->
+
+		<!-- News v2 Gray -->
+		<div class="container content-md">
+
+			<div class="row news-v2">
+				<div class="col-md-4 sm-margin-bottom-30">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/CRYSTALHUNGARIA.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3><a href="#">Hotel Crystal Hungaria</a></h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+					</div>
+				</div>
+				<div class="col-md-4 sm-margin-bottom-30">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/hayat.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3><a href="#">Hotel Hayat</a></h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></i>
+							| Saraybosna | Bosna Hersek</small>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/SEHER.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3><a href="#">Hotel Şeher</a></h3>
 						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
@@ -139,31 +216,21 @@
 				<div class="row news-v2">
 					<div class="col-md-4 sm-margin-bottom-30">
 						<div class="news-v2-badge">
-							<img class="img-responsive" src="{% static "img-temp/hotels/hills.jpg"%}" alt="">
+							<img class="img-responsive" src="{% static "img-temp/hotels/MEJDAN.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
-							<h3><a href="#">Hotel Hills</a></h3>
+							<h3><a href="#">Hotel Mejdan</a></h3>
 							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 						</div>
 					</div>
 					<div class="col-md-4 sm-margin-bottom-30">
 						<div class="news-v2-badge">
-							<img class="img-responsive" src="{% static "img-temp/hotels/krone.jpg"%}" alt="">
+							<img class="img-responsive" src="{% static "img-temp/hotels/RADON.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
-							<h3><a href="#">Hotel Krone</a></h3>
+							<h3><a href="#">Hotel Radon</a></h3>
 							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-							| Saraybosna | Bosna Hersek</small>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="news-v2-badge">
-							<img class="img-responsive" src="{% static "img-temp/hotels/terma.jpg"%}" alt="">
-						</div>
-						<div class="news-v2-desc">
-							<h3><a href="#">Terma Hotel</a></h3>
-							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 						</div>
 					</div>
@@ -175,108 +242,7 @@
 		<!--=== End Content Part ===-->
 
 
-
-		<!--=== Footer Version 1 ===-->
-		<div class="footer-v1">
-			<div class="footer">
-				<div class="container">
-					<div class="row">
-						<!-- About -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<a href="/"><img id="logo-footer" class="footer-logo" src="{% static "img/logo2-default.png"%}" alt=""></a>
-							<h4>BRIGHT TOURS</h4>
-							<p>Size Bosna Hersek ve Balkanlarda en güzel tatili geçirmenizi sağlayacağız.</p>
-						</div><!--/col-md-3-->
-						<!-- End About -->
-
-						<!-- Link List -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>ALTERNATİF TURLAR</h2></div>
-							<ul class="list-unstyled link-list">
-								<li><a href="/alternatives">Rafting</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">Kayak</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">At Binicilik</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">Buz Pateni</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/alternatives">Daha Fazlası ...</a><i class="fa fa-angle-right"></i></li>
-							</ul>
-						</div><!--/col-md-3-->
-						<!-- End Link List -->
-
-						<!-- Link List -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>BOSNA TURLARI</h2></div>
-							<ul class="list-unstyled link-list">
-								<li><a href="/bosnia-tours">Saraybosna</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Vişegrad</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/bosnia-tours">Saraybosna-Mostar-Travnik-Jajce-Vişegrad</a><i class="fa fa-angle-right"></i></li>
-							</ul>
-						</div><!--/col-md-3-->
-						<!-- End Link List -->
-
-						<!-- Link List -->
-						<div class="col-md-3 md-margin-bottom-40">
-							<div class="headline"><h2>BALKAN TURLARI</h2></div>
-							<ul class="list-unstyled link-list">
-								<li><a href="/balkan-tours">BOSNA HERSEK-SIRBİSTAN</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-KOSOVA-MAKEDONYA</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">BOSNA HERSEK-KARADAĞ-ARNAVUTLUK</a><i class="fa fa-angle-right"></i></li>
-								<li><a href="/balkan-tours">HIRVATİSTAN-KARADAĞ</a><i class="fa fa-angle-right"></i></li>
-							</ul>
-						</div><!--/col-md-3-->
-						<!-- End Link List -->
-					</div>
-				</div>
-			</div><!--/footer-->
-
-			<div class="copyright">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6">
-							<p>
-								2017 &copy; All Rights Reserved.
-								<a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
-							</p>
-						</div>
-
-						<!-- Social Links -->
-						<div class="col-md-6">
-							<ul class="footer-socials list-inline">
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Skype">
-										<i class="fa fa-skype"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Google Plus">
-										<i class="fa fa-google-plus"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Linkedin">
-										<i class="fa fa-linkedin"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-						<!-- End Social Links -->
-					</div>
-				</div>
-			</div><!--/copyright-->
-		</div>
-		<!--=== End Footer Version 1 ===-->
+		{% include 'footer.html' %}
 	</div><!--/wrapper-->
 
 	<!--=== Style Switcher ===-->
