--- a/templates/tourbaseen.html
+++ b/templates/tourbaseen.html
@@ -10,9 +10,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Bosna Hersek ve Balkanlarda eğlenceli bir tatil geçirmek için ulaşacağınız en doğru adres.">
 	<meta name="author" content="">
-	<meta name="title" content="Bright Tour">
+	<meta name="title" content="Bright Travel">
 
-	<meta property="og:title" content="Bright Tour" />
+	<meta property="og:title" content="Bright Travel" />
 	<meta property="og:image" content="http://bright.tours/static/img/main/sebill.jpg" />
 	<meta property="og:description" content="Bosna Hersek ve Balkanlarda eğlenceli bir tatil geçirmek için ulaşacağınız en doğru adres." />
 	<meta property="og:url" content="http://www.bright.tours">
